[package]
name = "axum-postgresql-7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.83"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["cookie"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
lettre = "0.11.10"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
	"runtime-async-std-native-tls",
	"postgres",
	"chrono",
	"uuid",
] }
time = "0.3.37"
tracing-subscriber = { version = "0.3.19" }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
jsonwebtoken = "9.3.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = { version = "0.19.0", features = ["derive"] }
